--- a/env.example
+++ b/env.example
@@ -1,12 +1,7 @@
-# HOW TO USE:
-#
-# 1 Add environment variables for the various stages here
-# 2 Rename this file to env.yml and uncomment it's usage
-#   in the serverless.yml.
-# 3 Make sure to not commit this file.
-
-dev:
-  APP_NAME: serverless-nodejs-starter
+# Add the environment variables for the various stages
 
 prod:
-  APP_NAME: serverless-nodejs
+  stripeSecretKey: "sk_test_YBZBOZqiRSGJD4GzJLIimJqc00M0Na8EcO"
+
+default:
+  stripeSecretKey: "sk_test_YBZBOZqiRSGJD4GzJLIimJqc00M0Na8EcO"
